source/blender/editors/space_view3d/view3d_navigate_walk.c
@@ -1231,11 +1231,11 @@ static int walkApply(bContext *C, WalkInfo *walk, bool is_confirm)
         /* keep moving if we were moving */
         copy_v2_v2(dvec, walk->teleport.direction);
 
-        z_cur = walk->rv3d->viewinv[3][2];
-        z_new = walk->teleport.origin[2] - getFreeFallDistance(walk->gravity, t) * walk->grid;
+        z_cur = walk->rv3d->viewinv[3][2] / walk->grid;
+        z_new = (walk->teleport.origin[2] / walk->grid) - getFreeFallDistance(walk->gravity, t);
 
         /* jump */
-        z_new += t * walk->speed_jump * walk->grid;
+        z_new += t * walk->speed_jump;
 
         /* duration is the jump duration */
         if (t > walk->teleport.duration) {
